[gd_scene load_steps=2 format=3 uid="uid://qwvu6a7gmtt0"]

[ext_resource type="Script" path="res://settings_menu.gd" id="1_4beqd"]

[node name="SettingsMenu" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4beqd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -139.0
offset_right = 218.5
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sensitivity"

[node name="SensitivitySlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[node name="BackToGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Game"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackToMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToGame" to="." method="_on_BackToGameButton_pressed"]
